Fix: auto image height on Safari & Chromium^71

--- a/src/assets/scss/_spotlight.scss
+++ b/src/assets/scss/_spotlight.scss
@@ -90,7 +90,7 @@
 
       .logo-image {
         display: flex;
-        height: 100%;
+        height: auto;
         width: 350px;
         box-sizing: border-box;
         border-right: 1px solid $gray;
